[package]
name = "psf2"
version = "0.3.1"
description = "Minimal, unopinionated PSF2 bitmap font parser"
edition = "2021"
license = "MIT OR Apache-2.0 OR Zlib"
repository = "https://github.com/Ralith/psf2"
readme = "README.md"
keywords = ["font", "text", "psf"]
categories = ["graphics", "no-std"]

[features]
default = ["std", "unicode"]
std = []
unicode = ["hashbrown", "rustc-hash"]

[dependencies]
hashbrown = { version = "0.12.1", optional = true, default-features = false, features = ["inline-more"] }
rustc-hash = { version = "1.1", optional = true }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true
